--- a/Lab_frozen_lake.ipynb
+++ b/Lab_frozen_lake.ipynb
@@ -199,6 +199,7 @@
         "#################TODO#####################\n",
         "#Did this save\n",
         "#what about this\n",
+        "#and htis\n",
         "#############################################\n",
         "display(Image.fromarray(env.render()))"
       ]
