--- a/Lab_frozen_lake.ipynb
+++ b/Lab_frozen_lake.ipynb
@@ -439,11 +439,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
-        "id": "DfOW34CSbr6t"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DfOW34CSbr6t",
+        "outputId": "7ec38694-b033-4299-c1bc-bd3b9a63332a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Position index= 3\n",
+            "Action index= 0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0.3333333333333333, 3, 0.0, False),\n",
+              " (0.3333333333333333, 2, 0.0, False),\n",
+              " (0.3333333333333333, 7, 0.0, True)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ],
       "source": [
         "# try to run several times to see the difference between slippery and non-slippery\n",
         "env=gym.make('FrozenLake-v1',is_slippery=True, render_mode=\"rgb_array\").unwrapped\n",
