--- a/Lab_frozen_lake.ipynb
+++ b/Lab_frozen_lake.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_RGDRPK28PI7",
-        "outputId": "1524a676-15c8-4d4a-e363-df97642b34dc"
+        "outputId": "a94e8049-1550-457b-d9f4-b47fb4db2aca"
       },
       "outputs": [
         {
@@ -63,7 +63,7 @@
             "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.11/dist-packages (from pexpect>4.3->ipython) (0.7.0)\n",
             "Requirement already satisfied: wcwidth in /usr/local/lib/python3.11/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython) (0.2.13)\n",
             "Downloading jedi-0.19.2-py2.py3-none-any.whl (1.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m23.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m14.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: jedi\n",
             "Successfully installed jedi-0.19.2\n",
             "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n"
@@ -101,13 +101,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VjtBznjE9PKx",
-        "outputId": "fdd77ca3-4f74-44c4-fcbd-02fddaa519e7"
+        "outputId": "6feb32fd-c938-436d-f88a-8ebb44f2658b"
       },
       "outputs": [
         {
@@ -130,14 +130,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
         },
         "id": "sPs5SLGH9VAW",
-        "outputId": "06c639a9-15ce-4b22-9848-33a910994c2a"
+        "outputId": "9e485ab6-dd34-4849-a519-392a63496b7c"
       },
       "outputs": [
         {
@@ -179,14 +179,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 305
         },
         "id": "_vCGU6lh9wGL",
-        "outputId": "e9597825-b3af-4e45-c8fc-ec00ab2bee88"
+        "outputId": "556f8b85-6e64-488f-b772-b332cc4300a3"
       },
       "outputs": [
         {
@@ -234,14 +234,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 338
         },
         "id": "iQK6OfvE9wVY",
-        "outputId": "1ef92a89-f216-49b6-9972-bb0358149f7a"
+        "outputId": "196d3b65-52e4-4656-9837-7048b91797b6"
       },
       "outputs": [
         {
@@ -293,14 +293,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 371
         },
         "id": "99eR1ULuCXvr",
-        "outputId": "d58e1d4a-0ec3-4408-ea22-d1a58680283a"
+        "outputId": "0f82593b-47e0-4fb9-bcd3-53c00a692b3d"
       },
       "outputs": [
         {
@@ -363,23 +363,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 7,
       "metadata": {
         "id": "2YZnmVgspsb6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 371
         },
-        "outputId": "c762143c-ad5e-4918-9cf6-e89e922acb83"
+        "outputId": "e152ba52-45e7-4216-ceb0-9a13aeedda14"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "state index= 4 reward= 0.0 is_finished= False\n",
+            "state index= 1 reward= 0.0 is_finished= False\n",
+            "state index= 1 reward= 0.0 is_finished= False\n",
             "state index= 5 reward= 0.0 is_finished= True\n",
-            "state index= 5 reward= 0 is_finished= True\n",
             "state index= 5 reward= 0 is_finished= True\n",
             "state index= 5 reward= 0 is_finished= True\n",
             "state index= 5 reward= 0 is_finished= True\n"
@@ -439,34 +439,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DfOW34CSbr6t",
-        "outputId": "7ec38694-b033-4299-c1bc-bd3b9a63332a"
+        "outputId": "fc7b73bb-668b-468f-d393-72017c83d685"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Position index= 3\n",
-            "Action index= 0\n"
+            "Position index= 14\n",
+            "Action index= 1\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[(0.3333333333333333, 3, 0.0, False),\n",
-              " (0.3333333333333333, 2, 0.0, False),\n",
-              " (0.3333333333333333, 7, 0.0, True)]"
+              "[(0.3333333333333333, 13, 0.0, False),\n",
+              " (0.3333333333333333, 14, 0.0, False),\n",
+              " (0.3333333333333333, 15, 1.0, True)]"
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 8
         }
       ],
       "source": [
@@ -510,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "bTjJ264Dbr6u"
       },
@@ -547,11 +547,34 @@
         "    \"\"\"\n",
         "    # Initialize the value function with zeros\n",
         "    value_function = np.zeros(nS)\n",
+        "\n",
         "    while True:\n",
         "        delta = 0\n",
-        "        ######################TODO#######################\n",
+        "        # Create a new array to store updated values for all states\n",
+        "        new_value_function = np.zeros(nS)\n",
         "\n",
-        "        #################################################\n",
+        "        # Iterate over all states\n",
+        "        for s in range(nS):\n",
+        "            # Look up the action for the current state based on the policy\n",
+        "            a = policy[s]\n",
+        "\n",
+        "            # Compute the expected return for state s\n",
+        "            expected_return = 0\n",
+        "            for prob, next_state, reward, done in P[s][a]:\n",
+        "                expected_return += prob * (reward + gamma * value_function[next_state] * (not done))\n",
+        "\n",
+        "            # Update the new value function for state s\n",
+        "            new_value_function[s] = expected_return\n",
+        "\n",
+        "            # Track the largest change in value function\n",
+        "            delta = max(delta, abs(new_value_function[s] - value_function[s]))\n",
+        "\n",
+        "        # Update the value function for the next iteration\n",
+        "        value_function = new_value_function\n",
+        "\n",
+        "        # Stop when the change is smaller than the tolerance\n",
+        "        if delta < tol:\n",
+        "            break\n",
         "\n",
         "    return value_function"
       ]
@@ -567,11 +590,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "QXWIEBDUbr6u"
+        "id": "QXWIEBDUbr6u",
+        "outputId": "5113da34-3725-43a0-af83-c48d2fe73165",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------- Policy 0 ------------------------------\n",
+            "[0.00227286 0.00573831 0.01777338 0.00714852 0.00070227 0.\n",
+            " 0.04771371 0.         0.02283129 0.05432034 0.15957058 0.\n",
+            " 0.         0.02267091 0.48525985 0.        ]\n",
+            "-------- Policy 1 ------------------------------\n",
+            "[0.         0.         0.01360396 0.         0.         0.\n",
+            " 0.04541214 0.         0.01990238 0.04723278 0.13891802 0.\n",
+            " 0.         0.13891802 0.41618813 0.        ]\n",
+            "-------- Policy 2 ------------------------------\n",
+            "[0.         0.         0.         0.         0.         0.\n",
+            " 0.         0.         0.         0.         0.         0.\n",
+            " 0.         0.         0.33333333 0.        ]\n",
+            "-------- Policy 3 ------------------------------\n",
+            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            "-------- Policy 4 ------------------------------\n",
+            "[0.         0.         0.         0.         0.01419052 0.\n",
+            " 0.         0.         0.03467274 0.1028287  0.12767669 0.\n",
+            " 0.         0.18214502 0.426022   0.        ]\n"
+          ]
+        }
+      ],
       "source": [
         "# evaluate random policy\n",
         "n_state = env.observation_space.n\n",
