--- a/Lab_frozen_lake.ipynb
+++ b/Lab_frozen_lake.ipynb
@@ -510,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "metadata": {
         "id": "bTjJ264Dbr6u"
       },
@@ -590,13 +590,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 17,
       "metadata": {
         "id": "QXWIEBDUbr6u",
-        "outputId": "5113da34-3725-43a0-af83-c48d2fe73165",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "991efad9-2f4b-46bd-eb28-edfe24e91ebd"
       },
       "outputs": [
         {
@@ -604,23 +604,19 @@
           "name": "stdout",
           "text": [
             "-------- Policy 0 ------------------------------\n",
-            "[0.00227286 0.00573831 0.01777338 0.00714852 0.00070227 0.\n",
-            " 0.04771371 0.         0.02283129 0.05432034 0.15957058 0.\n",
-            " 0.         0.02267091 0.48525985 0.        ]\n",
-            "-------- Policy 1 ------------------------------\n",
-            "[0.         0.         0.01360396 0.         0.         0.\n",
-            " 0.04541214 0.         0.01990238 0.04723278 0.13891802 0.\n",
-            " 0.         0.13891802 0.41618813 0.        ]\n",
-            "-------- Policy 2 ------------------------------\n",
-            "[0.         0.         0.         0.         0.         0.\n",
-            " 0.         0.         0.         0.         0.         0.\n",
-            " 0.         0.         0.33333333 0.        ]\n",
-            "-------- Policy 3 ------------------------------\n",
             "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            "-------- Policy 1 ------------------------------\n",
+            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            "-------- Policy 2 ------------------------------\n",
+            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            "-------- Policy 3 ------------------------------\n",
+            "[0.01436493 0.0167332  0.02704104 0.01122651 0.01946716 0.\n",
+            " 0.06359597 0.         0.03337519 0.09301968 0.1856507  0.\n",
+            " 0.         0.27759395 0.55562733 0.        ]\n",
             "-------- Policy 4 ------------------------------\n",
-            "[0.         0.         0.         0.         0.01419052 0.\n",
-            " 0.         0.         0.03467274 0.1028287  0.12767669 0.\n",
-            " 0.         0.18214502 0.426022   0.        ]\n"
+            "[0.01524055 0.00683149 0.00278965 0.00094739 0.02322034 0.\n",
+            " 0.06338839 0.         0.04153723 0.07564117 0.21153301 0.\n",
+            " 0.         0.03218079 0.56667621 0.        ]\n"
           ]
         }
       ],
@@ -672,12 +668,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "WeZQNWqMbr6u"
       },
       "outputs": [],
       "source": [
+        "from collections.abc import ByteString\n",
         "def policy_improvement(P, nS, nA, value, gamma=0.9):\n",
         "    \"\"\"\n",
         "    Given the value function V(s) from a policy π, improve the policy by taking a one-step look-ahead\n",
@@ -712,6 +709,20 @@
         "    # Initialize the new policy array\n",
         "    new_policy = np.zeros(nS, dtype=int)\n",
         "    ###################TODO#####################\n",
+        "    for s in range(nS):\n",
+        "        best_q = float('-inf')\n",
+        "        best_action = 0  # Store best action\n",
+        "\n",
+        "        for a in range(nA):\n",
+        "            q = 0  # Compute Q(s, a) by summing over all transitions\n",
+        "            for (prob, next_state, reward, done) in P[s][a]:\n",
+        "                q += prob * (reward + gamma * value[next_state])\n",
+        "\n",
+        "            if q > best_q:  # Check if this action is better\n",
+        "                best_q = q\n",
+        "                best_action = a  # Store action, not Q-value\n",
+        "\n",
+        "        new_policy[s] = best_action  # Assign best action for state\n",
         "\n",
         "    ############################################\n",
         "    return new_policy"
@@ -728,11 +739,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "id": "1_Oj7Rrfbr6u"
+        "id": "1_Oj7Rrfbr6u",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e2fea4d8-a154-4ab9-e84c-fbd5249215d1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------- Policy 0 ------------------------------\n",
+            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            "-------> Policy 0 IMPROVED ---------------------\n",
+            "[0.         0.         0.02264904 0.00907875 0.         0.\n",
+            " 0.05415996 0.         0.         0.         0.15891205 0.\n",
+            " 0.         0.         0.4761811  0.        ]\n",
+            "-------- Policy 1 ------------------------------\n",
+            "[0.         0.         0.         0.         0.         0.\n",
+            " 0.         0.         0.         0.         0.         0.\n",
+            " 0.         0.14251    0.47584333 0.        ]\n",
+            "-------> Policy 1 IMPROVED ---------------------\n",
+            "[0.         0.         0.03155046 0.01308357 0.         0.\n",
+            " 0.07479459 0.         0.         0.0745465  0.2190716  0.\n",
+            " 0.         0.24909301 0.58242634 0.        ]\n",
+            "-------- Policy 2 ------------------------------\n",
+            "[0.01393753 0.         0.         0.         0.03337156 0.\n",
+            " 0.         0.         0.07912125 0.15307005 0.21626899 0.\n",
+            " 0.         0.21626899 0.56863158 0.        ]\n",
+            "-------> Policy 2 IMPROVED ---------------------\n",
+            "[0.06226139 0.02608237 0.05579908 0.02366923 0.0857108  0.\n",
+            " 0.10521116 0.         0.14020485 0.24346806 0.2956015  0.\n",
+            " 0.         0.37714343 0.63758122 0.        ]\n",
+            "-------- Policy 3 ------------------------------\n",
+            "[0.         0.         0.         0.         0.         0.\n",
+            " 0.         0.         0.0297083  0.07096684 0.02101311 0.\n",
+            " 0.         0.18761407 0.55601361 0.        ]\n",
+            "-------> Policy 3 IMPROVED ---------------------\n",
+            "[0.04154668 0.01716481 0.04998842 0.02108521 0.0580527  0.\n",
+            " 0.10087579 0.         0.09592734 0.22465897 0.28723121 0.\n",
+            " 0.         0.36702179 0.63310998 0.        ]\n",
+            "-------- Policy 4 ------------------------------\n",
+            "[0.         0.         0.         0.         0.         0.\n",
+            " 0.         0.         0.         0.         0.         0.\n",
+            " 0.         0.1630417  0.38196153 0.        ]\n",
+            "-------> Policy 4 IMPROVED ---------------------\n",
+            "[0.         0.         0.03155046 0.01308357 0.         0.\n",
+            " 0.07479459 0.         0.         0.0745465  0.2190716  0.\n",
+            " 0.         0.24909301 0.58242634 0.        ]\n"
+          ]
+        }
+      ],
       "source": [
         "n_state = env.observation_space.n\n",
         "for i in range(5):\n",
